# flask_chat_app

./: README.md  main.py  pyproject.toml
templates/: index.html
