[tool.poetry]
name = "flask_chat_video"
version = "0.1.0"
description = ""
authors = ["Onur Sedef <onrsedef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SocketIO = "^5.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
